--- a/app/views/robotics/current/check-details.html
+++ b/app/views/robotics/current/check-details.html
@@ -8,9 +8,10 @@
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
   {{ govukPhaseBanner({
     tag: {
-    text: "prototype"
+    text: "prototype",
+    classes: "govuk-tag--pink"
     },
-      html: 'This is a prototype. It is not a real service.'
+      html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
     <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
@@ -96,7 +97,7 @@
 
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['sbi'] }}
+          {{ data['enter-sbi'] if data['sbi-radio'] == 'Yes' else 'No' }}
           </dd>
           <dd class="govuk-summary-list__actions">
 
