--- a/app/views/robotics/current/project-purchase-fail.html
+++ b/app/views/robotics/current/project-purchase-fail.html
@@ -6,12 +6,13 @@
 
 {% block beforeContent %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-{{ govukPhaseBanner({
-  tag: {
-    text: "prototype"
-  },
-  html: 'This is a prototype. It is not a real service.'
-}) }}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems  .'
+  }) }}
 
   <a class="govuk-back-link" href="project-purchase">Back</a>
 {% endblock %}
