--- a/app/views/robotics/current/project-start.html
+++ b/app/views/robotics/current/project-start.html
@@ -6,12 +6,13 @@ Have you already started work on the project?
 
 {% block beforeContent %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-{{ govukPhaseBanner({
-  tag: {
-    text: "prototype"
-  },
-  html: 'This is a prototype. It is not a real service.'
-}) }}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems  .'
+  }) }}
 
 <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
@@ -49,7 +50,7 @@ Have you already started work on the project?
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="project-start-3" name="project-start" type="radio" value="No" aria-describedby="project-start-3-item-hint" {{ checked("project-start", "No") }}>
                     <label class="govuk-label govuk-radios__label" for="project-start-3">
-                      No
+                      No, we have not done any work on this project yet
                     </label>
 
                   </div>
