--- a/app/views/slurry/current/answers.html
+++ b/app/views/slurry/current/answers.html
@@ -27,7 +27,7 @@
 <p class="govuk-!-font-size-24">Based on your answers, your project’s score is:</p>
 
     <div class="govuk-inset-text">
-      <h2 class="govuk-heading-m">Strong</h2>
+      <h2 class="govuk-heading-m">Average</h2>
       <p>This means your project seems likely to be successful.</p>
     </div>
 
@@ -50,7 +50,7 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key govuk-!-font-size-16">
-          Weak
+          Average
           </dt>
           <dd class="govuk-summary-list__value govuk-!-font-size-16">
             Your project seems like it’s an average fit with the funding priorities.  Based on your answers, a grant application seems like it might be successful. 
@@ -58,7 +58,7 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key govuk-!-font-size-16">
-          Average
+          Weak
             </dt>
             <dd class="govuk-summary-list__value govuk-!-font-size-16">
               Your project seems like it’s a weak fit with the funding priorities.  Based on your answers, a grant application seems unlikely to be successful.  
@@ -108,7 +108,7 @@
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Project impact
           <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['projects-impact'] | capitalize}} </li></ul></th>
-          <td class="govuk-table__cell">Strong</td>
+          <td class="govuk-table__cell">Average</td>
           <td class="govuk-table__cell">
             <p class="govuk-body govuk-!-font-size-16">
               Productivity <br/>
