--- a/app/views/slurry/current/check-details.html
+++ b/app/views/slurry/current/check-details.html
@@ -96,7 +96,7 @@
 
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['sbi'] }}
+            {{ data['enter-sbi'] if data['sbi-radio'] == 'Yes' else 'No' }}
           </dd>
           <dd class="govuk-summary-list__actions">
 
