--- a/app/views/slurry/current/water-SSSI.html
+++ b/app/views/slurry/current/water-SSSI.html
@@ -18,13 +18,15 @@
 {% block content %}
  <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
     <div class="govuk-form-group">
+      <div class="govuk-grid-column-two-thirds">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
                 Does the project directly impact a Site of Special Scientific Interest?
             </h1>
           </legend>
-          <br><br>
+
+
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="water-SSSI" name="water-SSSI" type="radio" value="Yes" {{ checked("water-SSSI", "Yes") }}>
@@ -40,8 +42,10 @@
             </div>
           </div>
         </fieldset>
-        <br><br><br>
+
+        <br><br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+        </div>
     </form>
 
 {%endblock%}
