--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -36,7 +36,7 @@
         <h2 class="govuk-heading-l">Design history</h2>
                   <p class='govuk-heading-m'>Version 2 (current)</p>
                     <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in 2nd round of usability testing.<br>
-                      <span class="govuk-body govuk-!-font-size-14"># Last updated on 30 July 2021<br/>
+                      <span class="govuk-body govuk-!-font-size-14"># Last updated on 5 August 2021<br/>
                       # Robotics not included</span></p>
 
                   <p class='govuk-heading-m'>Previous versions</p>
@@ -51,11 +51,11 @@
             <p class='govuk-heading-m'>Workflows, screenflows and user journeys</p>
               <p class='govuk-list app-list--definition'>
                 <a href='https://app.mural.co/t/capgemini3322/m/ftfgrants4310/1626110810024/185f9759f0ba83b4513012d6b47958ecad7c2fe4?sender=uac8e5181797d9857544e5168' class="govuk-link--no-visited-state" target="new">High fidelity screenflow on Mural (opens in new tab)</a><br>
-                    <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Mural last updated on 30 July 2021.<br></p>
+                    <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Mural last updated on 1 August 2021.<br></p>
 
             <p class='govuk-heading-m'>Wireframes</p>
               <p class='govuk-list app-list--definition'>
                 <a href='https://www.sketch.com/s/bc04f07a-1c5d-4173-8e97-941118e01749' class="govuk-link--no-visited-state" target="new">Sketch wireframes (opens in new tab)</a><br>
-                  Up to date designs.</p>
+                  <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Sketch is up to date.</p>
       </div>
 {% endblock %}
