Robotics R2 and Water changes

--- a/app/views/robotics/current/associated-works.html
+++ b/app/views/robotics/current/associated-works.html
@@ -11,7 +11,7 @@
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
@@ -45,84 +45,61 @@
 
 <div class="govuk-checkboxes">
   <div class="govuk-checkboxes__item">
-    <input class="govuk-checkboxes__input" id="robotic-equipment-1" name="robotic-equipment" type="checkbox" value="Robotic harvesting" {{ checked("robotic-equipment", "Robotic harvesting") }}>
+    <input class="govuk-checkboxes__input" id="robotic-equipment-1" name="robotic-equipment" type="checkbox" value="Robotic or automatic harvesting equipment" {{ checked("robotic-equipment", "Robotic or automatic harvesting equipment") }}>
     <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-1">
-      Robotic harvesting
+      Robotic or automatic harvesting equipment
     </label>
   </div>
   <div class="govuk-checkboxes">
     <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment" type="checkbox" value="Automatic harvesting" {{ checked("robotic-equipment", "Automatic harvesting") }}>
+      <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment" type="checkbox" value="Advanced ventilation control units" {{ checked("robotic-equipment", "Advanced ventilation control units") }}>
       <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-2">
-        Automatic harvesting
+        Advanced ventilation control units
       </label>
     </div>
     <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment" type="checkbox" value="Advanced ventilation controls" {{ checked("robotic-equipment", "Advanced ventilation controls") }}>
+        <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment" type="checkbox" value="Robotic weeding equipment" {{ checked("robotic-equipment", "Robotic weeding equipment") }}>
         <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-3">
-          Advanced ventilation controls
+          Robotic weeding equipment
         </label>
       </div>
       <div class="govuk-checkboxes">
         <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment" type="checkbox" value="Robotic weeding" {{ checked("robotic-equipment", "Robotic weeding") }}>
+          <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment" type="checkbox" value="Robotic milking equipment" {{ checked("robotic-equipment", "Robotic milking equipment") }}>
           <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
-            Robotic weeding
+            Robotic milking equipment
           </label>
         </div>
         <div class="govuk-checkboxes">
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment" type="checkbox" value="Robotic milking" {{ checked("robotic-equipment", "Robotic milking") }}>
+            <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment" type="checkbox" value="Robotic spraying equipment" {{ checked("robotic-equipment", "Robotic spraying equipment") }}>
             <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-5">
-              Robotic milking
+              Robotic spraying equipment
             </label>
           </div>
           <div class="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="robotic-equipment-6" name="robotic-equipment" type="checkbox" value="Robotic spraying" {{ checked("robotic-equipment", "Robotic spraying") }}>
-              <label class="govuk-label govuk-checkboxes__label" for="associated-works-6">
-                Robotic spraying
+              <input class="govuk-checkboxes__input" id="robotic-equipment-6" name="robotic-equipment" type="checkbox" value="Robotic sowing/planting equipment" {{ checked("robotic-equipment", "Robotic sowing/planting equipment") }}>
+              <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-6">
+                Robotic sowing/planting equipment
               </label>
             </div>
             <div class="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" type="checkbox" value="Robotic egg handling" {{ checked("robotic-equipment", "Robotic egg handling") }}>
+                <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" type="checkbox" value="Automated feeding systems" {{ checked("robotic-equipment", "Automated feeding systems") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-7">
-                  Robotic egg stacking
+                  Automated feeding systems
                 </label>
               </div>
               <div class="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="Feeding systems" {{ checked("robotic-equipment", "Feeding systems") }}>
+                  <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="led lighting" {{ checked("robotic-equipment", "Wavelength-controlled LED lighting") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-8">
-                    Feeding systems
+                    Wavelength-controlled LED lighting
                   </label>
                 </div>
-                <div class="govuk-checkboxes">
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="robotic-equipment-9" name="robotic-equipment" type="checkbox" value="Plant spacing robots" {{ checked("robotic-equipment", "Plant spacing robots") }}>
-                    <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-9">
-                    Plant-spacing robots
-                    </label>
-                  </div>
-                  <div class="govuk-checkboxes">
-                    <div class="govuk-checkboxes__item">
-                      <input class="govuk-checkboxes__input" id="robotic-equipment-10" name="robotic-equipment" type="checkbox" value="Fertilizer precision application system" {{ checked("robotic-equipment", "Fertilizer precision application system") }}>
-                      <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-10">
-                        Fertilizer precision-application system
-                      </label>
-                    </div>
-                    <div class="govuk-checkboxes">
-                      <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="robotic-equipment-11" name="robotic-equipment" type="checkbox" value="Wavelength controlled LED lighting" {{ checked("robotic-equipment", "Wavelength controlled LED lighting") }}>
-                        <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-11">
-                          Wavelength-controlled LED lighting
-                        </label>
-                      </div>
-
-
-    </div>
+                </div>
   </fieldset>
 </div>
 
@@ -133,22 +110,6 @@
 
       </form>
     </div>
-
-    <!--top right column 'Funding priorities'-->
-    <div class="govuk-grid-column-one-third">
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Funding priorities</span>
-          </h2>
-          <p class="govuk-body">RPA wants to fund projects that:</p>
-          <ul class="govuk-list govuk-list--bullet">
-          <li>improve productivity</li>
-          <li>improve the environment</li>
-          <li>introduce innovation</li>
-          </ul>
-
-      </div>
-      </div>
   </div>
 
 
