--- a/app/views/robotics/current/introducing-innovation.html
+++ b/app/views/robotics/current/introducing-innovation.html
@@ -64,7 +64,7 @@
           </h2>
           <p>RPA wants to fund projects that:
             <ul class="govuk-list govuk-list--bullet">
-              <li>introduces innovation </li>
+              <li>introduce innovation </li>
         </ul></p>
 
       </div>
