--- a/app/views/robotics/current/project-cost-fail.html
+++ b/app/views/robotics/current/project-cost-fail.html
@@ -26,7 +26,7 @@
      </h1>
 
     <div class="govuk-body">
-      <p>You can only apply for a grant of up to <strong>40%</strong> of the estimated costs.</p>
+      <p>You can only apply for a grant of up to 40% of the estimated costs.</p>
     </div>
 
 {{ govukInsetText({
