--- a/app/views/slurry/current/agent-details.html
+++ b/app/views/slurry/current/agent-details.html
@@ -52,6 +52,9 @@
           <label class="govuk-label" for="agent-landline">
               Mobile number
           </label>
+          <div id="landline-name-hint" class="govuk-hint">
+              We will only use this to contact you about your application
+          </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="agent-landline" name="agent-landline" type="agent-landline" spellcheck="false" aria-describedby="agent-landline-hint" autocomplete="agent-landline" value="{{ data['agent-landline'] }}">
         </div>
 
@@ -59,6 +62,9 @@
           <label class="govuk-label" for="agent-mobile">
               Landline number
           </label>
+          <div id="landline-name-hint" class="govuk-hint">
+              We will only use this to contact you about your application
+          </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="agent-mobile" name="agent-mobile" type="agent-mobile" spellcheck="false" aria-describedby="agent-mobile-hint" autocomplete="agent-mobile" value="{{ data['agent-mobile'] }}">
         </div>
 
