--- a/app/views/slurry/current/project-start.html
+++ b/app/views/slurry/current/project-start.html
@@ -49,7 +49,7 @@ Have you already started work on the project?
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="project-start-3" name="project-start" type="radio" value="No" aria-describedby="project-start-3-item-hint" {{ checked("project-start", "No") }}>
                     <label class="govuk-label govuk-radios__label" for="project-start-3">
-                      No
+                      No, we have not done any work on this project yet
                     </label>
 
                   </div>
