--- a/app/views/slurry/current/views/layouts/GUIDANCESLURRY.html
+++ b/app/views/slurry/current/views/layouts/GUIDANCESLURRY.html
@@ -63,7 +63,7 @@ Farming Transformation Fund slurry acidification grant
         Guidance
       </p>
       <h1 class="gem-c-title__text gem-c-title__text--long">
-        Farming Transformation Fund Productivity Grant
+        Farming Transformation Fund Improving Farm Productivity Grant
       </h1>
     </div>
 
