--- a/app/views/robotics/current/answers.html
+++ b/app/views/robotics/current/answers.html
@@ -16,7 +16,6 @@
 
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
-
 {% block content %}
 
 
@@ -31,13 +30,8 @@
       <h2 class="govuk-heading-m">Average</h2>
       <p>This means your project seems likely to be successful.</p>
     </div>
-
-
+</div>
   </div>
-  </div>
-
-
-
   <div class="govuk-grid-column-two-thirds css-index-link-block">
 
       <dl class="govuk-body">
@@ -65,14 +59,8 @@
               Your project seems like it’s a weak fit with the funding priorities. Based on your answers, a grant application seems unlikely to be successful.  
           </dd>
           </div>
-
-
-  </dl>
+</dl>
 </div>
-
-
-
-
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
       <br>
@@ -83,21 +71,12 @@
     The likelihood of a full application being successful will also depend on the number and value of applications we receive.
   </strong>
 </div>
-
     <p class="govuk-body">Value for money will be assessed alongside the funding priorities at full application stage and this may impact your overall project score.</p>
 
     <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
     <h1 class="govuk-heading-l">Your answers</h1>
     <p class="govuk-!-padding-bottom-4">You can go back to change scoring questions as many times as you like but you can only submit your details once.</p>
-
-
-
-
-
-
-
-  <table class="govuk-table govuk-body govuk-!-font-size-16">
-
+    <table class="govuk-table govuk-body govuk-!-font-size-16">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header">Answers</th>
@@ -107,38 +86,67 @@
         </tr>
       </thead>
       <tbody class="govuk-table__body">
-        <tr class="govuk-table__row">
 
+{% if data['wider-farming'] %}
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Technology used on farm
-          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['introducing-innovation'] | capitalize}}</li></ul></th>
+          <th scope="row" class="govuk-table__header">Data analytics to improve productivity
+          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9"><li>{{data['wider-farming'] | capitalize}}</li></ul></th>
           <td class="govuk-table__cell">Strong</td>
           <td class="govuk-table__cell">
             <p class="govuk-body govuk-!-font-size-16">
-              Introduces innovation</p>
+              Improve productivity</p>
+          </td>
+          <td class="govuk-table__cell"><a href="wider-farming">Change</td>
+        </tr>
+{% endif %}
+
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Type of energy
+          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
+            {% for item in data['energy-source'] %}
+            <li>{{ item | capitalize }}</li>
+            {% endfor %}
+          </ul>
+        </th>
+          <td class="govuk-table__cell">Strong</td>
+          <td class="govuk-table__cell">
+            <p class="govuk-body govuk-!-font-size-16">
+              Improve the environment<br>
+
+                Introduce innovation</p>
+          </td>
+          <td class="govuk-table__cell"><a href="energy-source">Change</td>
+        </tr>
+
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Agricultural sector
+          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['agricultural-sector'] | capitalize}}</li></ul></th>
+          <td class="govuk-table__cell">Strong</td>
+          <td class="govuk-table__cell">
+            <p class="govuk-body govuk-!-font-size-16">
+              Improve productivity<br>
+              Improve the environment<br>
+              Introduce innovation</p>
+          </td>
+          <td class="govuk-table__cell"><a href="agricultural-sector">Change</td>
+        </tr>
+
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Technology use
+          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['introducing-innovation'] | capitalize}}</li></ul></th>
+          <td class="govuk-table__cell">Strong</td>
+          <td class="govuk-table__cell">
+          <p class="govuk-body govuk-!-font-size-16">
+                Introduce innovation</p>
           </td>
           <td class="govuk-table__cell"><a href="introducing-innovation">Change</td>
         </tr>
       </tbody>
     </table>
 
-
-
-
-
-
-
-
-
-
-
-
 <h2 class="govuk-heading-m">Next steps</h2>
-
-
 <p class="govuk-body">Next, add your business and contact details and submit them to the RPA (you should only do this once).</p>
 <p>You’ll get an email with your score and answers, and a reference number.</p>
-
 <br/><br/>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
@@ -151,17 +159,5 @@
 
        </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 {% endblock %}
