--- a/app/views/robotics/current/planning-required-condition.html
+++ b/app/views/robotics/current/planning-required-condition.html
@@ -25,7 +25,7 @@
           You may be able to apply for a grant from this scheme
         </h1>
 
-        <p>Any planning permission must be in place by 31 March 2022 (the end of the application window).</p>
+        <p>Any planning permission must be in place by 31 May 2022.</p>
 
             <form class="form" action="{{ nextUrl }}" method="post">
               <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
