--- a/app/views/robotics/current/project-impact-fail.html
+++ b/app/views/robotics/current/project-impact-fail.html
@@ -24,7 +24,7 @@
         <h1 class="govuk-heading-l">
           You cannot apply for a grant from this scheme
         </h1>
-        <p>Your project must achieve at least one of the outcomes to be eligible for funding. </p>
+        <p>Your project must improve the productivity and profitability of your main agricultural or horticultural business.</p>
         <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-body"> See other grants you may be eligible for.</a>
         </p>
       </div>
