Slurry planning permission change

--- a/app/views/slurry/current/planning-permission.html
+++ b/app/views/slurry/current/planning-permission.html
@@ -68,9 +68,8 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>Any planning permission must be in place by 31 March 2022 (the end of the application window).</p>
-          <a href="#">
-          </a>
+          <p>You must have applied for planning permission before you submit a full application. <br><br>
+            Any planning permission must be in place by 31 May 2022. </p>
       </div>
     </div>
 
