Minor changes to new index

--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -23,7 +23,7 @@
     <h3 class="govuk-heading-s">Changes</h3>
     <p>We have made the following changes marked as <strong class="govuk-tag govuk-tag--orange">Important issue</strong>:
       <ul class="govuk-list govuk-list--number">
-      <li><a href="/slurry/current/projects-impact">Project impact page</a></li>
+      <li><a href="/slurry/current/projects-impact" class="govuk-link--no-visited-state">Project impact page</a></li>
         <ul class="govuk-list govuk-list--bullet">
           <li>‘Introduce acidification’ to ‘Introduce acidification for the first time’​</li>
           <li> ‘Increase acidification’ to ‘Add additional acidification installations’​​</li>
@@ -31,12 +31,14 @@
 
       <p>
 
-      <li><a href="/slurry/current/guidance">Project impact page</a></li>
+      <li><a href="/slurry/current/guidance" class="govuk-link--no-visited-state">Project impact page</a></li>
 
         <ul class="govuk-list govuk-list--bullet">
           <li>The grant summary text was changed ​</li>
           <li> The hyperlink to get to the ‘Start Page’ was embedded in a grey box to help users navigate easily​​​</li>
         </ul>
+  <li><a href="#" class="govuk-link--no-visited-state">GDS Content changes</a></li>
+        Some content changes have been applied suggested by GDS.
       </ul>
     </p>
 
@@ -44,7 +46,7 @@
     <h3 class="govuk-heading-s">Research notes</h3>
     <p>We are currently iterating v2 to start Round 3 of the usability testing with v3 on w/c 16 August 2021.</p>
 
-    <p><a href="https://capgemini.sharepoint.com/:p:/r/sites/FutureFarming/_layouts/15/Doc.aspx?sourcedoc=%7BC1C3BCD1-628B-4688-886C-D373C4B0C51E%7D&file=Slurry%20Usability%20Testing%202021.pptx&action=edit&mobileredirect=true&wdPreviousSession=adc45c79-b0d8-415b-95ad-b57dafcf5e2c&wdOrigin=TEAMS-ELECTRON.teams.undefined" target="new">View user research report (opens in new tab)</a>.<p>
+    <p><a href="https://capgemini.sharepoint.com/:p:/r/sites/FutureFarming/_layouts/15/Doc.aspx?sourcedoc=%7BC1C3BCD1-628B-4688-886C-D373C4B0C51E%7D&file=Slurry%20Usability%20Testing%202021.pptx&action=edit&mobileredirect=true&wdPreviousSession=adc45c79-b0d8-415b-95ad-b57dafcf5e2c&wdOrigin=TEAMS-ELECTRON.teams.undefined" class="govuk-link--no-visited-state" target="new">View user research report (opens in new tab)</a>.<p>
 
     {{ govukButton({
       text: 'View prototype',
@@ -60,17 +62,17 @@
     <h3 class="govuk-heading-s">Changes</h3>
     <p>We have made the following changes:
       <ul class="govuk-list govuk-list--number">
-      <li><a href="/slurry/v1/slurry-to-be-treated">Current and future treatment volume page</a></li>
+      <li><a href="/slurry/v1/slurry-to-be-treated" class="govuk-link--no-visited-state">Current and future treatment volume page</a></li>
       Hint text volume changed to 1500
     </p>
       <p>
         <p class="govuk-list govuk-list--number">
-      <li><a href="/slurry/v1/associated-works">Project items page</a></li>
+      <li><a href="/slurry/v1/associated-works" class="govuk-link--no-visited-state">Project items page</a></li>
         <ul class="govuk-list govuk-list--bullet">
           <li>Acidification infrastructure and slurry pipework merged as one option with hint text​</li>
           <li>  Hint text for ‘Mild acidification equipment’ was also changed to ‘You must buy...’​</li>
         </ul>
-      <li><a href="/slurry/current/low-emission">Slurry application page</a></li>
+      <li><a href="/slurry/current/low-emission" class="govuk-link--no-visited-state">Slurry application page</a></li>
       New question added in: 'Will you be using low-emission precision application equipment?'
       </ul>
     </p>
