--- a/app/views/robotics/current/planning-required-condition.html
+++ b/app/views/robotics/current/planning-required-condition.html
@@ -22,7 +22,7 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body govuk-!-font-size-48">
         <h1 class="govuk-heading-l">
-          You may be able to apply for a grant from this scheme
+          You may be able to apply for this grant
         </h1>
 
         <p>Any planning permission must be in place by 31 May 2022.</p>
